# gala

./: .gitmodules  CMakeLists.txt  README.md  csv.h  enum.h  ini.h  log.h  meta.h  string_builder.h
estd/: arena.h  args.h  common.h  enum.h  result.h  str.h
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
source/: exe.c  gala.c  gala.h
source/gala/: gala.c  gala.h
